Attempt to fix horizontal scrolling bug on mobile devices

--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 .nav-link{
     color: rgb(255, 255, 255);
 }
@@ -105,10 +109,6 @@
 
     .close-navbar-toggler.collapsed{
         z-index:-1;
-    }
-
-    body{
-        overflow-x: hidden;
     }
 }
 
